public/styles/tweets.css
.tweets-container {
  padding: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.tweet:hover {
  box-shadow: 5px 5px lightgray;
}

.tweet {
  border-style: solid;
  border-width: medium;
  padding: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
}

article.tweets-container header {
  margin-top: 0px;
  background-color: #f4f1ec;
  background-image: none;
  width: 100%;
  height: auto;
  padding: 20px;
  padding-bottom: 0px;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.handle {
  color: lightgray;
  font-weight: bold;
}

.message {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  text-align: left;
  height: auto;
  width: 100%;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-left: 30px;
  padding-right: 30px;
  font-weight: bold;
}

article.tweets-container footer {
  padding: 20px;
  border-top: solid;
  border-width: medium;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 80%;
}

i {
  margin-left: 5px;
  margin-right: 5px;
}

i:hover {
  color: #4056A1;
}

.pic-and-name {
  display: flex;
  flex-direction: row;
  align-items: center;

}

.avatar {
  margin-right: 20px;
}

